--- a/src/index.css
+++ b/src/index.css
@@ -98,14 +98,14 @@ img {
 
 .container {
   width: 100%;
-  max-width: 90%;
+  max-width: 1400px;
   margin-right: auto;
   margin-left: auto;
-  /* padding-right: 16px; */
-  /* padding-left: 16px; */
+  padding-right: 16px;
+  padding-left: 16px;
 }
 
-/* Tablet (≥ 640px) */
+
 @media (min-width: 640px) {
   .container {
     padding-right: 24px;
