--- a/src/index.css
+++ b/src/index.css
@@ -49,7 +49,6 @@
   src: url('./assets/fonts/SFPRODISPLAYMEDIUM.OTF') format('opentype');
 }
 
-
 html {
   box-sizing: border-box;
   height: 100%;
@@ -100,7 +99,6 @@ img {
   padding-left: 16px;
 }
 
-
 @media (min-width: 640px) {
   .container {
     padding-right: 24px;
@@ -121,6 +119,12 @@ img {
   .container {
     padding-right: 48px;
     padding-left: 48px;
+  }
+}
+
+@media (min-width: 1570px) {
+  .container {
+    max-width: 80%;
   }
 }
 
