--- a/src/index.css
+++ b/src/index.css
@@ -134,6 +134,7 @@ img {
 
 .container {
   width: 100%;
+  max-width: 100%;
   margin-right: auto;
   margin-left: auto;
   padding-right: 16px;
@@ -142,6 +143,7 @@ img {
 
 @media (min-width: 640px) {
   .container {
+    max-width: 90%;
     padding-right: 24px;
     padding-left: 24px;
   }
@@ -150,7 +152,7 @@ img {
 /* Laptop (≥ 1024px) */
 @media (min-width: 1024px) {
   .container {
-    max-width: 90%;
+    max-width: 90% !important;
     padding-right: 32px;
     padding-left: 32px;
   }
@@ -187,5 +189,11 @@ a {
 @media (max-width: 768px) {
   .about-section {
     background-size: 150px auto !important; 
+  }
+}
+
+@media (max-width: 500px) {
+  .project-card{
+    max-height: 300px;
   }
 }
